Fix spacing in `atom-material-ui` for other non-custom icons

--- a/styles/theme-overrides.less
+++ b/styles/theme-overrides.less
@@ -20,7 +20,7 @@ atom-workspace.theme-atom-material-ui {
       vertical-align: middle;
     }
 
-    .icon-tools:before {
+    .title.icon:before {
       vertical-align: text-bottom;
     }
   }
